1/1/2015 Oleg Moskalenko <mom040267@gmail.com>
Version 4.4.1.1 'Ardee West':
	- https admin server;
	- SSLv2 support removed;
	- The server-side short-term credentials mechanism support removed; 

12/24/2014 Oleg Moskalenko <mom040267@gmail.com>
Version 4.3.3.1 'Tolomei':
	- multiple authentication threads;
	- database code cleaned;

12/14/2014 Oleg Moskalenko <mom040267@gmail.com>
Version 4.3.2.2 'Tolomei':
	- Redis read message queue bug fixed;
	- STUN/TURN ALPN supported (when compiled with OpenSSL 1.0.2+ );
	- DTLS v1.2 supported (when compiled with OpenSSL 1.0.2+ );
	- Auto optimal ECDH parameters (when compiled with OpenSSL 1.0.2+ );
	- TLS/DTLS code cleaning.

11/29/2014 Oleg Moskalenko <mom040267@gmail.com>
Version 4.3.1.3 'Tolomei':
	- Reliability fixes (Issue 141 from rfc5766-turn-server).
	- HTTP/HTTPS echo fixed.
	- External address mapping fixes for Amazon EC2.
	- Minor docs improvements.
	
11/23/2014 Oleg Moskalenko <mom040267@gmail.com>
Version 4.3.1.2 'Tolomei':
	- Debian package fixes.
	
11/22/2014 Oleg Moskalenko <mom040267@gmail.com>
Version 4.3.1.1 'Tolomei':
	- SQLite supported as the default user database.
	- Support of the flat-file user database removed.
	- TLS connection procedure improved in uclient test program.
	
11/07/2014 Oleg Moskalenko <mom040267@gmail.com>
Version 4.2.3.1 'Monza':
	- Request re-transmission implemented in uclient test program.
	- TLS connection procedure improved in uclient test program.

10/26/2014 Oleg Moskalenko <mom040267@gmail.com>
Version 4.2.2.2 'Monza':
	- Black- and white- IP lists are divided per realm
		(the DB schema for those two tables changed);
	- Updated Redis database schema.
	- Debian UFW file added (Issue 1 fixed).
	- TCP/TLS tests extended.
	- Relay RTCP sockets ports allocation fixed.
	- List of libraries cleaned.
	- SSL renegotiation callback fixed.

10/05/2014 Oleg Moskalenko <mom040267@gmail.com>
Version 4.2.1.2 'Monza':
	- oAuth security experimental implementation;